# bazi-ziwei-skill

./: .gitignore  README.en.md  README.md  SKILL.md  TEST-GUIDE.md  pyproject.toml  setup.py
calculator/: package-lock.json  package.json  render.ts  run-chart.ts  tsconfig.json
calculator/yiqi-core/: jieqi.ts
config/: license_plate_rules.json
docs/: OUTPUT-SCHEMA.md  UI-DESIGN.md  license-plate-bazi.md
examples/: license-plate-demo.md  license_plate_demo.md  sample-report.html
license_plate_bazi/: __init__.py
references/: license-plate-bazi-workflow.md
scripts/: license_plate_recommend.py
src/license_plate_bazi/: __init__.py  bazi_adapter.py  cli.py  explainer.py  five_elements.py  plate_parser.py  rules.py  scoring.py
templates/: report-zonghe-poster.html
tests/: test_explainer.py  test_plate_parser.py  test_rules.py  test_scoring.py
